force-app/main/default/objects/Error_Log__c/fields/Associated_Records__c.field-meta.xml
<CustomField>
    <fullName>Associated_Records__c</fullName>
    <label>Associated Records</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>