force-app/main/default/objects/Error_Log__c/fields/BC_Instance__c.field-meta.xml
<CustomField>
    <fullName>BC_Instance__c</fullName>
    <label>BC Instance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BC_Synced_Instances_c</valueSetName>
    </valueSet>
</CustomField>