force-app/main/default/objects/Error_Log__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category of the error for reporting</description>
    <inlineHelpText>Category of the error for reporting</inlineHelpText>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>